[gd_scene load_steps=5 format=3 uid="uid://cvok25wgh7ja5"]

[ext_resource type="Script" path="res://bullets/area.gd" id="1_6ndyo"]
[ext_resource type="Texture2D" uid="uid://cohe25vtuuxu" path="res://images/circle_warning.png" id="1_y4na4"]
[ext_resource type="Texture2D" uid="uid://du40or5fhpltq" path="res://images/circle.png" id="2_v2opf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_17m2l"]
radius = 491.123

[node name="Area2D" type="Area2D"]
collision_layer = 2
script = ExtResource("1_6ndyo")

[node name="CircleWarning" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("1_y4na4")

[node name="Circle" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_v2opf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_17m2l")

[node name="Timers" type="Node" parent="."]

[node name="DelayTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="ChargeTimeTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="DurationTimer" type="Timer" parent="Timers"]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timers/DelayTimer" to="." method="_on_delay_timer_timeout"]
[connection signal="timeout" from="Timers/ChargeTimeTimer" to="." method="_on_charge_time_timer_timeout"]
[connection signal="timeout" from="Timers/DurationTimer" to="." method="_on_duration_timer_timeout"]
